examples/fail/RxRw-WyRx.stl
/** TwolocSwap **/
global x,y; 
local l1, l2; 

/** Optimised **/ 
write(y,l2); 
read(x,l1); 

/** Unoptimised **/ 
read(x,l1);  
write(y,l2);  

